Remove uneeded bootstrap markup and fix scrollbar issues

--- a/css/app.css
+++ b/css/app.css
@@ -21,7 +21,7 @@ body, html{
 }
 .streetview{
   text-align: center;
-  margin: 20px 0px 5px 0px;
+  margin: 0px 0px 5px 0px;
 }
 .address{
   text-align: center;
@@ -93,6 +93,7 @@ body, html{
 
 /*-- BAND -------------------------------------*/
 .band{
+  padding: 0px 15px;
   color: #FFF;
   border-top: 1px solid #DDD;
   border-bottom: 1px solid #DDD;
@@ -152,8 +153,8 @@ body, html{
 /*-- VERTICAL ALIGN -------------------------------------*/
 .vertical-align-wrap{
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 99.9%; /*-- Fixes scrollbar issues --*/
+  height: 99.9%;
   display: table;
 }
 
